--- a/html/index.html
+++ b/html/index.html
@@ -24,9 +24,31 @@
 
 <body>
 
+    <!--Menu -->
+
+    <nav id="menu">
+        <ul>
+            <br>
+            <li><a href="# ">Principal</a></li>
+            <li><a href="# ">Empresa</a></li>
+            <li><a href="# ">Soluções</a></li>
+            <li><a href="# ">Filiais</a></li>
+            <li>
+                <a href="# ">Área de Atuação</a>
+            </li>
+            <li>
+                <a href="# ">Contato</a>
+            </li>
+            <li>
+                <a href="# ">Trabalhe Conosco</a>
+            </li>
+        </ul>
+    </nav>
+
+
     <!--Cabeçalho -->
 
-    <div class="cabecalho">
+    <header class="cabecalho">
         <br>
         <img class="posicao_img_baggeto" src="../img/baggeto.png " alt=" " style="width: 150 ;height: 150px; " />
 
@@ -38,34 +60,8 @@
 
         </FONT>
 
-    </div>
+    </header>
 
-    <!--Menu -->
-
-    <div>
-        <center>
-
-            <nav id="menu">
-                <ul>
-                    <br>
-                    <li><a href="# ">Principal</a></li>
-                    <li><a href="# ">Empresa</a></li>
-                    <li><a href="# ">Soluções</a></li>
-                    <li><a href="# ">Filiais</a></li>
-                    <li>
-                        <a href="# ">Área de Atuação</a>
-                    </li>
-                    <li>
-                        <a href="# ">Contato</a>
-                    </li>
-                    <li>
-                        <a href="# ">Trabalhe Conosco</a>
-                    </li>
-                </ul>
-            </nav>
-
-        </center>
-    </div>
 
     <!--Imagem Principal-->
     <div>
@@ -115,9 +111,14 @@
 
         <p class="paragrafo1 ">
 
-            A Transportes Baggeto iniciou sua trajetória no ano de 1983. Silvério Baggio começou no ramo de caminhões aos seus 18 anos, por influência de seu pai agricultor e caminhoneiro. Ele buscava uma maneira de gerar renda para poder se sustentar. Nesses nove
-            anos, dentro de uma cabine de caminhão, transportando riquezas em todo território brasileiro, deu-se início ao sonho da empresa. Tomou gosto pela profissão e especializou-se no ramo de transportes. Em 1992, abriu sua própria empresa: a Transportes
-            Baggeto LTDA, nome originado pelo apelido dado por seus companheiros de trabalho. A empresa começa suas atividades com 2 caminhões, mas muitos sonhos.
+            A Transportes Baggeto iniciou sua trajetória no ano de 1983. Silvério Baggio começou no ramo de caminhões
+            aos seus 18 anos, por influência de seu pai agricultor e caminhoneiro. Ele buscava uma maneira de gerar
+            renda para poder se sustentar. Nesses nove
+            anos, dentro de uma cabine de caminhão, transportando riquezas em todo território brasileiro, deu-se início
+            ao sonho da empresa. Tomou gosto pela profissão e especializou-se no ramo de transportes. Em 1992, abriu sua
+            própria empresa: a Transportes
+            Baggeto LTDA, nome originado pelo apelido dado por seus companheiros de trabalho. A empresa começa suas
+            atividades com 2 caminhões, mas muitos sonhos.
 
         </p>
 
@@ -135,14 +136,24 @@
 <!--Paragrafo2-->
 <div class="posicao_texto2 ">
     <p class="paragrafo2 ">
-        Atualmente, a Baggeto conta com mais de 200 colaboradores além de uma extensa carteira de terceiros e agregados. Atua em vários estados, nos mais diversos segmentos, com representatividade e reconhecimento no mercado nacional. Ao longo desses anos, a
-        Transportes Baggeto aperfeiçoou sua atuação no mercado nacional, desenvolvendo uma equipe especializada, proporcionando ao cliente segurança no transporte e qualidade nas informações. Ao longo desses anos, a Transportes Baggeto acumulou credibilidade
+        Atualmente, a Baggeto conta com mais de 200 colaboradores além de uma extensa carteira de terceiros e agregados.
+        Atua em vários estados, nos mais diversos segmentos, com representatividade e reconhecimento no mercado
+        nacional. Ao longo desses anos, a
+        Transportes Baggeto aperfeiçoou sua atuação no mercado nacional, desenvolvendo uma equipe especializada,
+        proporcionando ao cliente segurança no transporte e qualidade nas informações. Ao longo desses anos, a
+        Transportes Baggeto acumulou credibilidade
         e elogios, deixando a certeza de que a Baggeto está no caminho certo.
     </p>
     <p class="paragrafo2 ">
-        Com uma estrutura sólida, hoje, a empresa tem entre seus padrões: a agilidade, segurança e a confiança que seus clientes necessitam para um resultado final com total satisfação. Acreditar, investir e inovar são a essência da Transportes Baggeto. Nosso
-        foco está em oferecer soluções inovadoras, sempre se preocupando com nossa gente e comunidade. Reconhecemos a importância das pessoas no desenvolvimento da empresa, pois é a nossa gente que nos faz evoluir. Em vista disso, todos precisam estar
-        motivados e ser valorizados. Assim, buscamos trabalhar de forma aberta com nossos colaboradores, proporcionando condições de trabalho adequadas, mantendo a equipe focada, treinada e atualizada, além de procurar sempre aproximar suas famílias da
+        Com uma estrutura sólida, hoje, a empresa tem entre seus padrões: a agilidade, segurança e a confiança que seus
+        clientes necessitam para um resultado final com total satisfação. Acreditar, investir e inovar são a essência da
+        Transportes Baggeto. Nosso
+        foco está em oferecer soluções inovadoras, sempre se preocupando com nossa gente e comunidade. Reconhecemos a
+        importância das pessoas no desenvolvimento da empresa, pois é a nossa gente que nos faz evoluir. Em vista disso,
+        todos precisam estar
+        motivados e ser valorizados. Assim, buscamos trabalhar de forma aberta com nossos colaboradores, proporcionando
+        condições de trabalho adequadas, mantendo a equipe focada, treinada e atualizada, além de procurar sempre
+        aproximar suas famílias da
         empresa.
     </p>
 
@@ -200,7 +211,8 @@
 <!--Pocisão Missao-->
 <div class="posicao_texto_missao ">
     <h1>Missão:</h1>
-    <p>Desenvolver soluções logísticas confiáveis e seguras, gerando crescimento<br> sustentável e expectativas positivas aos clientes e contribuindo no desenvolvimento da sociedade.</p>
+    <p>Desenvolver soluções logísticas confiáveis e seguras, gerando crescimento<br> sustentável e expectativas
+        positivas aos clientes e contribuindo no desenvolvimento da sociedade.</p>
 </div>
 
 <!--Imagem8 Empresa-->
@@ -225,7 +237,9 @@
 <!--Pocisão Frota-->
 <div class="posicao_texto_frota ">
     <h1>Frota:</h1>
-    <p>Caminhões novos e modernos entre bitrens e rodotrens mantidos <br>sobre rigorosos cuidados mecânicos e conduzidos por motoristas responsáveis e experientes. Nossos veículos<br> são rastreados via satélite com uma comunicação direta com a empresa<br>        garantindo segurança, estabilidade e a entrega dentro do prazo.</p>
+    <p>Caminhões novos e modernos entre bitrens e rodotrens mantidos <br>sobre rigorosos cuidados mecânicos e conduzidos
+        por motoristas responsáveis e experientes. Nossos veículos<br> são rastreados via satélite com uma comunicação
+        direta com a empresa<br> garantindo segurança, estabilidade e a entrega dentro do prazo.</p>
 </div>
 
 <!--Imagem9 Empresa-->
@@ -238,10 +252,18 @@
 <!--Pocisão Valores-->
 <div class="posicao_texto_valores ">
     <h1>Valores:</h1>
-    <p>Confiança e credibilidade; respeitar o cliente; honrar compromissos, ser transparente, agir com seriedade e rigor, ser responsável; servir o cliente cada vez melhor. Comprometimento: desenvolver as atividades com comprometimento e paixão, traduzida
-        na utilização de meios adequados e na eficiência dos processos. Agilidade: dinamismo e simplicidade fazem parte do nosso DNA e, para nos mantermos competitivos, estes atributos devem estar presentes em todas as operações e processos da empresa.
-        Segurança: garantir a integridade dos serviços por meio de atitudes e comportamentos, evitando ao máximo o número de sinistros e avarias. Ética: ser verdadeiro com os clientes, colaboradores, sócios e sociedade, tratando todos como gostaria de
-        ser tratado, de forma respeitosa, sabendo ouvir e entender o que está no íntimo das pessoas. Sustentabilidade: econômica, social e ambiental; crescer economicamente com solidez financeira por meio da boa gestão das pessoas, sociedade e meio ambiente.
+    <p>Confiança e credibilidade; respeitar o cliente; honrar compromissos, ser transparente, agir com seriedade e
+        rigor, ser responsável; servir o cliente cada vez melhor. Comprometimento: desenvolver as atividades com
+        comprometimento e paixão, traduzida
+        na utilização de meios adequados e na eficiência dos processos. Agilidade: dinamismo e simplicidade fazem parte
+        do nosso DNA e, para nos mantermos competitivos, estes atributos devem estar presentes em todas as operações e
+        processos da empresa.
+        Segurança: garantir a integridade dos serviços por meio de atitudes e comportamentos, evitando ao máximo o
+        número de sinistros e avarias. Ética: ser verdadeiro com os clientes, colaboradores, sócios e sociedade,
+        tratando todos como gostaria de
+        ser tratado, de forma respeitosa, sabendo ouvir e entender o que está no íntimo das pessoas. Sustentabilidade:
+        econômica, social e ambiental; crescer economicamente com solidez financeira por meio da boa gestão das pessoas,
+        sociedade e meio ambiente.
     </p>
 </div>
 <!--Imagem Sassmaq-->
@@ -314,7 +336,8 @@
 <!--Pocisão Texto Filial SP-->
 <div class="posicao_texto_sp ">
 
-    <p>Cidade: Cordeirópolis, SP<br>Rodivia: Washington Luiz, Km 154-5<br>Numero: 196<br>Cep: 13490-000<br>Fone: (19) 3546-8193 / 3546-8204</p>
+    <p>Cidade: Cordeirópolis, SP<br>Rodivia: Washington Luiz, Km 154-5<br>Numero: 196<br>Cep: 13490-000<br>Fone: (19)
+        3546-8193 / 3546-8204</p>
 
 </div>
 
@@ -362,7 +385,8 @@
 
 <!--Pocisão Texto Filial BA-->
 <div class="posicao_texto_ba ">
-    <p>Cidade: Barreiras, BA<br>Rodovia: BR 242 020, Km 577,5<br>Nº S/N<br>Bairro: Area Rural de Barreiras<br>Cep: 47819-899 </p>
+    <p>Cidade: Barreiras, BA<br>Rodovia: BR 242 020, Km 577,5<br>Nº S/N<br>Bairro: Area Rural de Barreiras<br>Cep:
+        47819-899 </p>
 </div>
 <!--Imagem Filial PA-->
 <div class="posicao_img_pa ">
@@ -384,7 +408,8 @@
 
 <!--Pocisão Texto Filial PR-->
 <div class="posicao_texto_pr ">
-    <p>Cidade: São José dos Pinhais, PR<br>Rodovia: BR 376, Km 626<br>Sala: 06<br>Bairro: Campo Largo da Roseira<br>Cep: 83090-360 </p>
+    <p>Cidade: São José dos Pinhais, PR<br>Rodovia: BR 376, Km 626<br>Sala: 06<br>Bairro: Campo Largo da Roseira<br>Cep:
+        83090-360 </p>
 </div>
 <!--Imagem Filial RS-->
 <div class="posicao_img_rs ">
@@ -395,7 +420,8 @@
 
 <!--Pocisão Texto Filial RS-->
 <div class="posicao_texto_rs ">
-    <p>Cidade: Santo Antonio da Patrulha, RS<br>Rua: João Carlos Benficad<br>Numero: 474<br>Bairro: Local de Passos da Cruz
+    <p>Cidade: Santo Antonio da Patrulha, RS<br>Rua: João Carlos Benficad<br>Numero: 474<br>Bairro: Local de Passos da
+        Cruz
         <br>Cep: 95500-000 </p>
 </div>
 <!--Area de Atuacao-->
@@ -410,14 +436,16 @@
         <br>
         <br>
         <br>
-    </center> <img class="posicao_img_area_atuacao " src="../img/area_atuacao.png " alt=" " style="width: 640px ;height: 480px; " <br>
+    </center> <img class="posicao_img_area_atuacao " src="../img/area_atuacao.png " alt=" "
+        style="width: 640px ;height: 480px; " <br>
     <br>
     <br>
     <br>
 </div>
 <div>
     <ul class="paragrafo_branco ">
-        <li class="posicao_texto_area_atuacao ">A TRANSPORTES BAGGETO vem fortemente atuando nas regiões, Sul, Sudeste, Norte, Nordeste e Centro Oeste do Brasil.</li>
+        <li class="posicao_texto_area_atuacao ">A TRANSPORTES BAGGETO vem fortemente atuando nas regiões, Sul, Sudeste,
+            Norte, Nordeste e Centro Oeste do Brasil.</li>
 
     </ul>
 </div>
@@ -435,7 +463,8 @@
 <div class="posicao_texto_contato1 ">
 
     <br><br><br>
-    <p>Matriz: Orleans - SC<br> Rua: Atilio Fenilli<br> N°: s/n<br> Bairro: Corridas<br> Cep: 88870000<br> Fone: (48) 3466-3241 / 3466-4782 <br><br>E-mails: <br>Comercial<br> comercial@transportesbaggeto.com.br<br><br> Financeiro
+    <p>Matriz: Orleans - SC<br> Rua: Atilio Fenilli<br> N°: s/n<br> Bairro: Corridas<br> Cep: 88870000<br> Fone: (48)
+        3466-3241 / 3466-4782 <br><br>E-mails: <br>Comercial<br> comercial@transportesbaggeto.com.br<br><br> Financeiro
         <br> financeiro@transportesbaggeto.com.br<br><br> Cargas <br>cargas@transportesbaggeto.com.br<br><br> Compras
         <br>compras@transportesbaggeto.com.br<br><br> Setor Pessoal<br> rh@transportesbaggeto.com.br
     </p>
@@ -445,7 +474,8 @@
 <div class="posicao_texto_contato2 ">
 
     <br><br><br>
-    <p>Filial: Cordeirópolis - SP<br> Rodovia: Washington Luiz, Km 154 – 5 <br>Numero: 196<br> Cep: 13490-000 <br>Fone: (19) 35468193 / 35468204<br><br><br> E-mails: <br><br>Comercial<br> rodrigo@transportesbaggeto.com.br
+    <p>Filial: Cordeirópolis - SP<br> Rodovia: Washington Luiz, Km 154 – 5 <br>Numero: 196<br> Cep: 13490-000 <br>Fone:
+        (19) 35468193 / 35468204<br><br><br> E-mails: <br><br>Comercial<br> rodrigo@transportesbaggeto.com.br
         <br><br>Financeiro <br>rossi@transportesbaggeto.com.br<br><br> Faturamento
         <br>faturamentosp@transportesbaggeto.com.br
     </p>
