--- a/html/teste.html
+++ b/html/teste.html
@@ -20,6 +20,8 @@
 
   </nav>
 
+  <!--Cabeçalho-->
+
   <header id="topo">
     <h1>Fotos profissionais</h1>
     <p>Logo, o parágrafo é o conjunto de frases que formam uma sequência com sentido, com lógica. Pode ser assinalado
@@ -27,6 +29,8 @@
       um novo assunto.</p>
     <a href="#servicos" class="botao">Ver Mais</a>
   </header>
+
+  <!--Corpo-->
 
   <section id="sobre">
     <h2>Sobre</h2>
@@ -85,6 +89,8 @@
     </div>
 
   </section>
+
+  <!--Rodape-->
 
   <footer>
     <a href="#topo">Voltar</a>
