--- a/html/teste.html
+++ b/html/teste.html
@@ -2,100 +2,95 @@
 <html>
 
 <head>
-  <link href="../css/estilos.css" rel="stylesheet">
-  <link href="../css/normalize.css" rel="stylesheet">
-  <title>Fotos</title>
+    <link href="../css/estilos.css" rel="stylesheet">
+    <link href="../css/normalize.css" rel="stylesheet">
+    <title>Fotos</title>
 </head>
 
 <body>
 
-  <nav>
 
-    <ul>
-      <li><a href="#sobre">Sobre</a></li>
-      <li><a href="#servicos">Servicos</a></li>
-      <li><a href="#foto">Fotos</a></li>
-      <li><a href="#contato">Contato</a></li>
-    </ul>
+    <nav>
 
-  </nav>
+        <ul>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#servicos">Servicos</a></li>
+            <li><a href="#foto">Fotos</a></li>
+            <li><a href="#contato">Contato</a></li>
+        </ul>
 
-  <!--Cabeçalho-->
+    </nav>
 
-  <header id="topo">
-    <h1>Fotos profissionais</h1>
-    <p>Logo, o parágrafo é o conjunto de frases que formam uma sequência com sentido, com lógica. Pode ser assinalado
-      graficamente, como exposto acima, ou ainda oralmente, quando se faz uma pausa maior dos fatos ou quando iniciamos
-      um novo assunto.</p>
-    <a href="#servicos" class="botao">Ver Mais</a>
-  </header>
+    <!--Cabeçalho-->
 
-  <!--Corpo-->
+    <header id="topo">
+        <h1>Fotos profissionais</h1>
+        <p>Logo, o parágrafo é o conjunto de frases que formam uma sequência com sentido, com lógica. Pode ser assinalado graficamente, como exposto acima, ou ainda oralmente, quando se faz uma pausa maior dos fatos ou quando iniciamos um novo assunto.</p>
+        <a href="#servicos" class="botao">Ver Mais</a>
+    </header>
 
-  <section id="sobre">
-    <h2>Sobre</h2>
-    <p>Sim, são dessas formas que conseguimos identificar um parágrafo! O símbolo § caiu em desuso pela adoção do
-      afastamento que se dá no início da linha, contudo, ainda é a forma utilizada em leis, veja:</p>
-    <a href="#contato" class="botao">Contrate Agora</a>
-  </section>
+    <!--Corpo-->
 
-  <section id="serviços">
-    <h2>Serviços</h2>
-    <div>
-      <img src="../img/teste/p1.png" alt="Camera">
-      <h3>Fotografia</h3>
-      <p>O importante é visualizar se no texto há uma coesão (ligação semântica) entre os parágrafos e se há coerência
-        no que se diz, ou seja, uma sequência de ideias que possuem sentido e caminham para uma conclusão.</p>
-    </div>
+    <section id="sobre">
+        <h2>Sobre</h2>
+        <p>Sim, são dessas formas que conseguimos identificar um parágrafo! O símbolo § caiu em desuso pela adoção do afastamento que se dá no início da linha, contudo, ainda é a forma utilizada em leis, veja:</p>
+        <a href="#contato" class="botao">Contrate Agora</a>
+    </section>
 
-    <div>
-      <img src="../img/teste/p2.png" alt="Filme">
-      <h3>Edição de Videos</h3>
-      <p>O importante é visualizar se no texto há uma coesão (ligação semântica) entre os parágrafos e se há coerência
-        no que se diz, ou seja, uma sequência de ideias que possuem sentido e caminham para uma conclusão.</p>
-    </div>
+    <section id="serviços">
+        <h2>Serviços</h2>
+        <div>
+            <img src="../img/teste/p1.png" alt="Camera">
+            <h3>Fotografia</h3>
+            <p>O importante é visualizar se no texto há uma coesão (ligação semântica) entre os parágrafos e se há coerência no que se diz, ou seja, uma sequência de ideias que possuem sentido e caminham para uma conclusão.</p>
+        </div>
 
-    <div>
-      <img src="../img/teste/p3.png" alt="videoplayer">
-      <h3>Captacao de Imagens</h3>
-      <p>O importante é visualizar se no texto há uma coesão (ligação semântica) entre os parágrafos e se há coerência
-        no que se diz, ou seja, uma sequência de ideias que possuem sentido e caminham para uma conclusão.</p>
-    </div>
-  </section>
+        <div>
+            <img src="../img/teste/p2.png" alt="Filme">
+            <h3>Edição de Videos</h3>
+            <p>O importante é visualizar se no texto há uma coesão (ligação semântica) entre os parágrafos e se há coerência no que se diz, ou seja, uma sequência de ideias que possuem sentido e caminham para uma conclusão.</p>
+        </div>
+
+        <div>
+            <img src="../img/teste/p3.png" alt="videoplayer">
+            <h3>Captacao de Imagens</h3>
+            <p>O importante é visualizar se no texto há uma coesão (ligação semântica) entre os parágrafos e se há coerência no que se diz, ou seja, uma sequência de ideias que possuem sentido e caminham para uma conclusão.</p>
+        </div>
+    </section>
 
 
-  <section id="fotos">
-    <h2>Fotos</h2>
-    <img src="../img/teste/ceu.jpg" alt="ceu">
-    <img src="../img/teste/grama.jpg" alt="grama">
-    <img src="../img/teste/montanha.jpg" alt="montanha">
-    <img src="../img/teste/mar.jpg" alt="mar">
-    <img src="../img/teste/arvores.jpg" alt="arvores">
-    <img src="../img/teste/ponte.jpg" alt="ponte">
-  </section>
+    <section id="fotos">
+        <h2>Fotos</h2>
+        <img src="../img/teste/ceu.jpg" alt="ceu">
+        <img src="../img/teste/grama.jpg" alt="grama">
+        <img src="../img/teste/montanha.jpg" alt="montanha">
+        <img src="../img/teste/mar.jpg" alt="mar">
+        <img src="../img/teste/arvores.jpg" alt="arvores">
+        <img src="../img/teste/ponte.jpg" alt="ponte">
+    </section>
 
-  <section id="contato">
-    <h2>Contato</h2>
-    <p>Vem Falar com a Gente</p>
+    <section id="contato">
+        <h2>Contato</h2>
+        <p>Vem Falar com a Gente</p>
 
-    <div>
-      <img src="../img/teste/tel.png" alt="telefone">
-      <p><a href="tel:48999887733">(48) 99988-7733</a></p>
-    </div>
+        <div>
+            <img src="../img/teste/tel.png" alt="telefone">
+            <p><a href="tel:48999887733">(48) 99988-7733</a></p>
+        </div>
 
-    <div>
-      <img src="../img/teste/mail.png" alt="email">
-      <p><a href="mailto:derivan.carboni@gmail.com">derivan.carboni@gmail.com</a></p>
-    </div>
+        <div>
+            <img src="../img/teste/mail.png" alt="email">
+            <p><a href="mailto:derivan.carboni@gmail.com">derivan.carboni@gmail.com</a></p>
+        </div>
 
-  </section>
+    </section>
 
-  <!--Rodape-->
+    <!--Rodape-->
 
-  <footer>
-    <a href="#topo">Voltar</a>
-    <p>Desenvolvido por derivan</p>
-  </footer>
+    <footer>
+        <a href="#topo">Voltar</a>
+        <p>Desenvolvido por derivan</p>
+    </footer>
 
 </body>
 
