--- a/html/index.html
+++ b/html/index.html
@@ -78,54 +78,19 @@
         <img src="../img/capa.jpg " alt=" " style="width: 100% ;height: 100%; " />
     </div>
 
-    <section>
-
-        <!--Div Agilidade-->
-        <div id="div_agilidade">
-
-        </div>
-        <!--Div Seguranca-->
-        <div id="div_seguranca">
-
-        </div>
-        </div>
-        <!--Div Confianca-->
-        <div id="div_confianca">
-
-        </div>
-        <!--Texto Agilidade-->
-
-        <h3 class="agilidade ">AGILIDADE</h3>
-        <!--Texto Seguranca-->
-
-        <h3 class="seguranca ">SEGURANÇA</h3>
-        <!--Texto Confianca-->
-
-        <h3 class="confianca ">CONFIANÇA</h3>
-
-    </section>
-
     <!--Titulo Empresa-->
 
     <section class="titulo_azul ">
 
-        <center>
-            <h2>EMPRESA</h2>
-        </center>
+        <h2>EMPRESA</h2>
 
     </section>
 
     <!--Imagem1 Empresa-->
 
-    <section class="posicao_img ">
+    <section>
 
         <img src="../img/empresa/empresa1.jpg " alt=" " style="width: 238px ;height: 156px; " />
-
-    </section>
-
-    <!--posicao Paragrafo Texto1-->
-
-    <section class="posicao_texto1 ">
 
         <p class="paragrafo1 ">
 
@@ -139,23 +104,15 @@
 
     <!--Imagem2 Empresa-->
 
-    <section class="posicao_img2 ">
+    <section>
 
         <img src="../img/empresa/empresa2.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
-    </section>
-
-    <!--Paragrafo2-->
-
-    <section>
         <p>
             Atualmente, a Baggeto conta com mais de 200 colaboradores além de uma extensa carteira de terceiros e agregados. Atua em vários estados, nos mais diversos segmentos, com representatividade e reconhecimento no mercado nacional. Ao longo desses anos, a
             Transportes Baggeto aperfeiçoou sua atuação no mercado nacional, desenvolvendo uma equipe especializada, proporcionando ao cliente segurança no transporte e qualidade nas informações. Ao longo desses anos, a Transportes Baggeto acumulou credibilidade
             e elogios, deixando a certeza de que a Baggeto está no caminho certo.
         </p>
-    </section>
-
-    <section>
 
         <p>
             Com uma estrutura sólida, hoje, a empresa tem entre seus padrões: a agilidade, segurança e a confiança que seus clientes necessitam para um resultado final com total satisfação. Acreditar, investir e inovar são a essência da Transportes Baggeto. Nosso
@@ -167,7 +124,9 @@
     </section>
 
     <section>
+
         <!--Imagem3 Empresa-->
+
         <div>
 
             <img src="../img/empresa/empresa3.png " alt=" " style="width: 307px ;height: 208px; " />
@@ -202,6 +161,8 @@
 
     </section>
 
+    <!--Imagens Empresa-->
+
     <section>
 
         <!--Imagem6 Empresa-->
@@ -210,13 +171,9 @@
 
             <img src="../img/empresa/empresa6.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
-        </div>
-
-        <!--Pocisão Negócio-->
-
-        <div>
             <h1>Negócio:</h1>
             <p>Confiabilidade e segurança em soluções logísticas.</p>
+
         </div>
 
         <!--Imagem7 Empresa-->
@@ -225,13 +182,9 @@
 
             <img src="../img/empresa/empresa7.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
-        </div>
-
-        <!--Pocisão Missao-->
-
-        <div>
             <h1>Missão:</h1>
             <p>Desenvolver soluções logísticas confiáveis e seguras, gerando crescimento<br> sustentável e expectativas positivas aos clientes e contribuindo no desenvolvimento da sociedade.</p>
+
         </div>
 
         <!--Imagem8 Empresa-->
@@ -240,27 +193,20 @@
 
             <img src="../img/empresa/empresa8.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
-        </div>
-
-        <!--Pocisão Visão-->
-
-        <div>
             <h1>Visão:</h1>
             <p>Ser uma empresa fundamental na logística brasileira.</p>
+
         </div>
 
         <!--Imagem10 Empresa-->
+
         <div>
 
             <img src="../img/empresa/empresa10.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
-        </div>
-
-        <!--Pocisão Frota-->
-
-        <div>
             <h1>Frota:</h1>
             <p>Caminhões novos e modernos entre bitrens e rodotrens mantidos <br>sobre rigorosos cuidados mecânicos e conduzidos por motoristas responsáveis e experientes. Nossos veículos<br> são rastreados via satélite com uma comunicação direta com a empresa<br>                garantindo segurança, estabilidade e a entrega dentro do prazo.</p>
+
         </div>
 
         <!--Imagem9 Empresa-->
@@ -269,11 +215,6 @@
 
             <img src="../img/empresa/empresa9.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
-        </div>
-
-        <!--Pocisão Valores-->
-
-        <div>
             <h1>Valores:</h1>
             <p>Confiança e credibilidade; respeitar o cliente; honrar compromissos, ser transparente, agir com seriedade e rigor, ser responsável; servir o cliente cada vez melhor. Comprometimento: desenvolver as atividades com comprometimento e paixão,
                 traduzida na utilização de meios adequados e na eficiência dos processos. Agilidade: dinamismo e simplicidade fazem parte do nosso DNA e, para nos mantermos competitivos, estes atributos devem estar presentes em todas as operações e processos
@@ -281,37 +222,42 @@
                 como gostaria de ser tratado, de forma respeitosa, sabendo ouvir e entender o que está no íntimo das pessoas. Sustentabilidade: econômica, social e ambiental; crescer economicamente com solidez financeira por meio da boa gestão das pessoas,
                 sociedade e meio ambiente.
             </p>
+
         </div>
 
     </section>
 
-    <!--Imagem Sassmaq-->
+    <section>
 
-    <div>
+        <!--Imagem Sassmaq-->
 
-        <img src="../img/empresa/sassmaq.png " alt=" " style="width: 238px ;height: 156px; " />
+        <div>
 
-    </div>
+            <img src="../img/empresa/sassmaq.png " alt=" " style="width: 238px ;height: 156px; " />
 
-    <!--Imagem Certificado Sassmaq-->
+        </div>
 
-    <div>
+        <!--Imagem Certificado Sassmaq-->
 
-        <img src="../img/empresa/certificado_sassmaq.jpg " alt=" " style="width: 138px ;height: 156px; " />
+        <div>
 
-    </div>
+            <img src="../img/empresa/certificado_sassmaq.jpg " alt=" " style="width: 138px ;height: 156px; " />
 
-    <!--Imagem Despoluir-->
+        </div>
 
-    <div class="posicao_img_despoluir ">
+        <!--Imagem Despoluir-->
 
-        <img src="../img/empresa/despoluir.png " alt=" " style="width: 257px ;height: 129px; " />
+        <div>
 
-    </div>
+            <img src="../img/empresa/despoluir.png " alt=" " style="width: 257px ;height: 129px; " />
+
+        </div>
+
+    </section>
 
     <!--Soluções -->
 
-    <section id="div_solucoes ">
+    <section>
 
         <img class="posicao_img_solucoes " src="../img/solucoes/fundo_solucoes.png " alt=" " />
 
@@ -430,28 +376,19 @@
 
     <section>
 
-        <div <section id="div_area_atuacao ">
-            <br>
-            <br>
-            <br>
-            <br>
+        <div>
+
             <center>
-                <h1 class="titulo_branco ">
-                    ÁREA DE ATUAÇÃO</h1>
-                <br>
-                <br>
-                <br>
-            </center> <img class="posicao_img_area_atuacao " src="../img/area_atuacao.png " alt=" " style="width: 640px ;height: 480px; " <br>
-            <br>
-            <br>
-            <br>
+                <h1>ÁREA DE ATUAÇÃO</h1>
+            </center>
+
+            <img class="posicao_img_area_atuacao " src="../img/area_atuacao.png " alt=" " style="width: 640px ;height: 480px; ">
 
         </div>
 
-        <div class="paragrafo_branco ">
-            <li class="posicao_texto_area_atuacao ">A TRANSPORTES BAGGETO vem fortemente atuando nas regiões, Sul, Sudeste, Norte, Nordeste e Centro Oeste do Brasil.</li>
+        <div>
+            <li>A TRANSPORTES BAGGETO vem fortemente atuando nas regiões, Sul, Sudeste, Norte, Nordeste e Centro Oeste do Brasil.</li>
 
-            </ul>
         </div>
 
     </section>
@@ -466,27 +403,26 @@
             </center>
         </div>
 
-        <center>
-            <h2>Nossos Endereços</h2>
-        </center>
+        <h2>Nossos Endereços</h2>
 
         <!--Texto Contato1-->
 
-        <div class="posicao_texto_contato1 ">
+        <div>
 
-            <br><br><br>
-            <atriz: Orleans - SC<br> Rua: Atilio Fenilli<br> N°: s/n<br> Bairro: Corridas<br> Cep: 88870000<br> Fone: (48) 3466-3241 / 3466-4782 <br><br>E-mails: <br>Comercial<br> comercial@transportesbaggeto.com.br<br><br> Financeiro
+            <Matriz: Orleans - SC<br> Rua: Atilio Fenilli<br> N°: s/n<br> Bairro: Corridas<br> Cep: 88870000<br> Fone: (48) 3466-3241 / 3466-4782 <br><br>E-mails: <br>Comercial<br> comercial@transportesbaggeto.com.br<br><br> Financeiro
                 <br> financeiro@transportesbaggeto.com.br<br><br> Cargas <br>cargas@transportesbaggeto.com.br<br><br> Compras
                 <br>compras@transportesbaggeto.com.br<br><br> Setor Pessoal<br> rh@transportesbaggeto.com.br
                 </p>
 
         </div>
-        <!--Texto Contato2-->
-        <div class="posicao_texto_contato2 ">
 
-            <br><br><br> ilial: Cordeirópolis - SP<br> Rodovia: Washington Luiz, Km 154 – 5 <br>Numero: 196<br> Cep: 13490-000 <br>Fone: (19) 35468193 / 35468204<br><br><br> E-mails: <br><br>Comercial<br> rodrigo@transportesbaggeto.com.br
-            <br><br>Financeiro <br>rossi@transportesbaggeto.com.br<br><br> Faturamento
-            <br>faturamentosp@transportesbaggeto.com.br
+        <!--Texto Contato2-->
+
+        <div>
+
+            <p>Filial: Cordeirópolis - SP<br> Rodovia: Washington Luiz, Km 154 – 5 <br>Numero: 196<br> Cep: 13490-000 <br>Fone: (19) 35468193 / 35468204<br><br><br> E-mails: <br><br>Comercial<br> rodrigo@transportesbaggeto.com.br
+                <br><br>Financeiro <br>rossi@transportesbaggeto.com.br<br><br> Faturamento
+                <br>faturamentosp@transportesbaggeto.com.br
             </p>
 
         </div>
@@ -495,14 +431,10 @@
 
     <!--Rodape-->
 
-    <footer id="div_rodape ">
+    <footer>
 
-        <center>
-
-            <img src=" ../img/webmail.png " alt=" " />
-            <img src="../img/curriculo.png " alt=" " />
-
-        </center>
+        <img src=" ../img/webmail.png " alt=" " />
+        <img src="../img/curriculo.png " alt=" " />
 
     </footer>
 
