--- a/html/index.html
+++ b/html/index.html
@@ -9,15 +9,8 @@
 
     <!--Estilos-->
 
-    <link href="../css/cabecalho.css" rel="stylesheet">
-    <link href="../css/menu.css" rel="stylesheet">
-    <link href="../css/empresa.css" rel="stylesheet">
-    <link href="../css/video.css" rel="stylesheet">
-    <link href="../css/solucoes.css" rel="stylesheet">
-    <link href="../css/filiais.css" rel="stylesheet">
-    <link href="../css/area_atuacao.css" rel="stylesheet">
-    <link href="../css/contato.css" rel="stylesheet">
-    <link href="../css/rodape.css" rel="stylesheet">
+    <link href="../css/normalize.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
 
     <title>Transportes Baggeto</title>
 
@@ -259,6 +252,7 @@
 
     <section>
 
+        <h2>SOLUÇÕES</h2>
         <img class="posicao_img_solucoes " src="../img/solucoes/fundo_solucoes.png " alt=" " />
 
     </section>
