--- a/html/index.html
+++ b/html/index.html
@@ -22,23 +22,12 @@
 
     <header>
 
-        <section>
+        <section id="logo">
 
             <br>
 
-            <img src="../img/baggeto.png " alt=" " style="width: 150 ;height: 150px; " />
-
-        </section>
-
-        <section>
-
-            <FONT size="5" FACE=sans-serif COLOR="#7DBDDE ">
-                <i>Seu Horizonte é o Nosso Destino.</i>
-
-                <br>
-                <br>
-
-            </FONT>
+            <img src="../img/baggeto.png " alt="" style="width: 150 ;height: 150px; " />
+            <h1>Seu Horizonte é o Nosso Destino.</h1>
 
         </section>
 
