--- a/html/index.html
+++ b/html/index.html
@@ -27,6 +27,7 @@
             <br>
 
             <img src="../img/baggeto.png " alt="" style="width: 150 ;height: 150px; " />
+            
             <h1>Seu Horizonte é o Nosso Destino.</h1>
 
         </section>
@@ -70,7 +71,7 @@
 
     <!--Imagem1 Empresa-->
 
-    <section>
+    <section id="imagens">
 
         <img src="../img/empresa/empresa1.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
