--- a/html/index.html
+++ b/html/index.html
@@ -71,25 +71,33 @@
 
     <!--Imagem1 Empresa-->
 
-    <section id="imagens">
+    <section id="empresa">
+
+        <div>
 
         <img src="../img/empresa/empresa1.jpg " alt=" " style="width: 238px ;height: 156px; " />
+        </div>
 
-        <p class="paragrafo1 ">
+        <div>
+        <p>
 
             A Transportes Baggeto iniciou sua trajetória no ano de 1983. Silvério Baggio começou no ramo de caminhões aos seus 18 anos, por influência de seu pai agricultor e caminhoneiro. Ele buscava uma maneira de gerar renda para poder se sustentar. Nesses nove
             anos, dentro de uma cabine de caminhão, transportando riquezas em todo território brasileiro, deu-se início ao sonho da empresa. Tomou gosto pela profissão e especializou-se no ramo de transportes. Em 1992, abriu sua própria empresa: a Transportes
             Baggeto LTDA, nome originado pelo apelido dado por seus companheiros de trabalho. A empresa começa suas atividades com 2 caminhões, mas muitos sonhos.
 
         </p>
+    </div>
+  </div>
+
+    <div>
+        <img src="../img/empresa/empresa2.jpg " alt=" " style="width: 238px ;height: 156px; " />
+    </div>
 
     </section>
 
     <!--Imagem2 Empresa-->
 
     <section>
-
-        <img src="../img/empresa/empresa2.jpg " alt=" " style="width: 238px ;height: 156px; " />
 
         <p>
             Atualmente, a Baggeto conta com mais de 200 colaboradores além de uma extensa carteira de terceiros e agregados. Atua em vários estados, nos mais diversos segmentos, com representatividade e reconhecimento no mercado nacional. Ao longo desses anos, a
