--- a/html/index.html
+++ b/html/index.html
@@ -426,9 +426,9 @@
 
     </section>
 
-    <section id="empresa">
+        <h2 class="alinha_no_centro">Nossos Endereços:</h2>
 
-        <h2>Nossos Endereços</h2>
+    <section id="empresa">
 
         <!--Texto Contato1-->
 
