--- a/html/index.html
+++ b/html/index.html
@@ -277,7 +277,7 @@
 
     <section>
 
-        <div>
+        <div class="opacidade_fundo_servicos">
 
         <img class="posicao_img_solucoes " src="../img/solucoes/fundo_solucoes.png " alt="imagem fundo solucoes" width="100%" height="100%" />
 
@@ -456,12 +456,15 @@
 
     <!--Rodape-->
 
-    <footer>
+    <footer >
 
         <center>
 
         <img src=" ../img/webmail.png " alt=" " />
+        <p><a target="_blank" href="https://br924.hostgator.com.br:2096/">WebMail</a></p>
+
         <img src="../img/curriculo.png " alt=" " />
+        <p><a target="_blank" href="https://br924.hostgator.com.br:2096/">Envie Seu Curriculo</a></p>
 
         </center>
         
