--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,6 @@
     <link href="../css/style.css" rel="stylesheet">
 
     <title>Transportes Baggeto</title>
-    <p>testando branch</p>
 
 </head>
 
@@ -53,6 +52,10 @@
             <li>
                 <a target="_blank" href="# ">Trabalhe Conosco</a>
             </li>
+            <li>
+                <a target="_blank" href="# ">Trabalhe Conosco</a>
+            </li>
+
 
         </ul>
     </nav>
@@ -345,15 +348,15 @@
 
     <!--Imagem Matriz-->
 
-    <section>
+    
 
+    <section>
+        
         <div id="empresa">
 
             <img src="../img/filiais/matriz.jpg " alt=" " style="width: 242px ;height: 147px; " />
 
-            <h1>Matriz</h1>
-
-            <p>Cidade: Orleans, SC<br>Rua: Atilio Fenilli<br>Nº S/N<br>Bairro:Corridas<br>Cep:88870-000<br>Fone: (48) 3466-4782
+            <p>Cidade: Matriz - Orleans, SC<br>Rua: Atilio Fenilli<br>Nº S/N<br>Bairro:Corridas<br>Cep:88870-000<br>Fone: (48) 3466-4782
             </p>
 
         </div>
