--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
 
             <img src="../img/baggeto.png " alt="" style="width: 150 ;height: 150px; " />
             
-            <h1>Seu Horizonte é o Nosso Destino.</h1>
+            <h1>Seu Horizonte é o Nosso Destino..</h1>
 
 
         </section>        
