--- a/html/index.html
+++ b/html/index.html
@@ -480,20 +480,21 @@
 
         <div>
 
-            <Matriz: Orleans - SC<br> Rua: Atilio Fenilli<br> N°: s/n<br> Bairro: Corridas<br> Cep: 88870000<br> Fone: (48) 3466-3241 / 3466-4782 <br><br>E-mails: <br>Comercial<br> comercial@transportesbaggeto.com.br<br><br> Financeiro
-                <br> financeiro@transportesbaggeto.com.br<br><br> Cargas <br>cargas@transportesbaggeto.com.br<br><br> Compras
-                <br>compras@transportesbaggeto.com.br<br><br> Setor Pessoal<br> rh@transportesbaggeto.com.br
+            <Matriz: Orleans - SC<br> Rua: Atilio Fenilli<br> N°: s/n<br> Bairro: Corridas<br> Cep: 88870000<br> Fone: (48) 3466-3241 / 3466-4782 <br><br>E-mails: <br><br>Comercial<br> <a href="mailto:comercial@transportesbaggeto.com.br">comercial@transportesbaggeto.com.br</a><br><br> Financeiro
+                <br> <a href="mailto:financeiro@transportesbaggeto.com.br">financeiro@transportesbaggeto.com.br</a><br><br> Cargas <br><a href="mailto:cargas@transportesbaggeto.com.br">cargas@transportesbaggeto.com.br</a><br><br> Compras
+                <br><a href="mailto:compras@transportesbaggeto.com.br">compras@transportesbaggeto.com.br</a><br><br> Setor Pessoal<br> <a href="mailto:rh@transportesbaggeto.com.br">rh@transportesbaggeto.com.br</a>
                 </p>
-                <br><br>
+                <br><br><br>
         </div>
 
         <!--Texto Contato2-->
 
         <div>
 
-            <p>Filial: Cordeirópolis - SP<br> Rodovia: Washington Luiz, Km 154 – 5 <br>Numero: 196<br> Cep: 13490-000 <br>Fone: (19) 35468193 / 35468204<br><br><br> E-mails: <br><br>Comercial<br> rodrigo@transportesbaggeto.com.br
-                <br><br>Financeiro <br>rossi@transportesbaggeto.com.br<br><br> Faturamento
-                <br>faturamentosp@transportesbaggeto.com.br
+            <p>Filial: Cordeirópolis - SP<br> Rodovia: Washington Luiz, Km 154 – 5 <br>Numero: 196<br> Cep: 13490-000 <br>Fone: (19) 35468193 / 35468204<br><br><br> E-mails: <br><br>Comercial<br> <a href="mailto:rodrigo@transportesbaggeto.com.br">rodrigo@transportesbaggeto.com.br</a>
+                <br><br>Financeiro <br><a href="mailto:rossi@transportesbaggeto.com.br">rossi@transportesbaggeto.com.br</a><br><br> Faturamento
+                <br>
+                <a href="mailto:faturamentosp@transportesbaggeto.com.br">faturamentosp@transportesbaggeto.com.br</a>
             </p>
 
         </div>
