--- a/html/index.html
+++ b/html/index.html
@@ -57,7 +57,7 @@
     <!--Imagem Principal-->
 
     <div>
-        <img src="../img/img_principal.jpg " alt=" " style="width: 100% ;height: 100%; " />
+        <img src="../img/img_principal.png " alt=" " style="width: 100% ;height: 100%; " />
     </div>
 
     <br><br>
@@ -199,7 +199,7 @@
             <div id="empresa">
 
                 <h2>Missão:</h2>
-                <h3><li>Desenvolver soluções logísticas confiáveis e seguras, gerando crescimento<br> sustentável e expectativas positivas aos clientes e contribuindo no desenvolvimento da sociedade.</li></h3>
+                <h3><li>Desenvolver soluções logísticas confiáveis e seguras, gerando crescimento sustentável e expectativas positivas aos clientes e contribuindo no desenvolvimento da sociedade.</li></h3>
     
             </div>
             
