--- a/html/index.html
+++ b/html/index.html
@@ -156,13 +156,16 @@
 
     <section id="empresa">
 
-<div>
-        <video width="520 " height="340 " controls>
+    <div>
+        <video controls>
 
-        <source src="../video/video_baggeto.mp4 " type="video/mp4 ">
-        Seu navegador nao suporta esse tipo de Video.
+        <source src="../video/video_baggeto.ogg"  type="video/ogg">
+            <source src="../video/video_baggeto.mp4" type="video/mp4">
 
- </video>
+            Seu navegador não suporta o elemento <code>video</code>.
+
+        </video>
+    </div>
 
     </section>
 
