--- a/html/index.html
+++ b/html/index.html
@@ -48,7 +48,7 @@
                 <a href="#ir_contato">Contato</a>
             </li>
             <li>
-                <a target="_blank" href="../img/image.png">Trabalhe Conosco</a>
+                <a target="_blank" href="../img/pagina_em_construcao.jpg">Trabalhe Conosco</a>
             </li>
 
         </ul>
