--- a/html/index.html
+++ b/html/index.html
@@ -360,8 +360,14 @@
             <div>
             <img src="../img/filiais/matriz.jpg " alt=" " style="width: 242px ;height: 147px; " />
         </div>
+
             <div>
-                <img src="../img/filiais/div_txt_filial_SC.png " alt=" " style="width: 242px ;height: 147px; " />
+                <br><br>
+                <i>Cidade: Matriz Orleans, SC</i>
+                <i>Rua: Atilio Fenilli</i>
+                <i>Bairro: Corridas</i>
+                <i>Cep: 88870-000</i>
+                <i>Fone: (48) 3466-3241</i>
         </div>
             
         </div>
@@ -377,7 +383,12 @@
         </div>
         
         <div>
-            <img src="../img/filiais/div_txt_filial_sp.png " alt=" " style="width: 242px ;height: 147px; " />
+            <br><br>
+            <i>Cidade: Cordeirópolis, SP</i>
+                <i>Rodovia: Washigton Luiz, Km 154-5</i>
+                <i>Número: 196</i>
+                <i>Cep: 13490-000</i>
+                <i>Fone: (19) 3546-8193 / 3546-8204</i>
         </div>
 
         </div>
