--- a/html/index.html
+++ b/html/index.html
@@ -60,7 +60,7 @@
     <!--Imagem Principal-->
 
     <div>
-        <img src="../img/img_principal.png " alt=" " style="width: 100% ;height: 100%; " />
+        <img src="../img/empresa/IMG_6821.jpg " alt=" " style="width: 100% ;height: 100%; " />
     </div>
 
     <br><br>
