--- a/html/index.html
+++ b/html/index.html
@@ -60,7 +60,7 @@
     <!--Imagem Principal-->
 
     <div>
-        <img src="../img/empresa/IMG_6821.jpg " alt=" " style="width: 100% ;height: 100%; " />
+        <img src="../img/IMG_6821-2.jpg " alt=" " style="width: 100% ;height: 100%; " />
     </div>
 
     <br><br>
@@ -445,7 +445,7 @@
         <div id="empresa">
 
             <div>
-            <img src="../img/filiais/filial_mg.jpg " alt=" " style="width: 242px ;height: 147px; " />
+            <img src="../img/filiais/IMG-20200925-WA0012.jpg " alt=" " style="width: 242px ;height: 147px; " />
         </div>
             <div>
                 <P class="div_filial">
