--- a/html/index.html
+++ b/html/index.html
@@ -162,9 +162,8 @@
     <div>
         <video controls>
  
-            <source src="../video/video_baggeto.mp4" type="video/mp4">
-            <source src="../video/video_baggeto.ogg" type="video/ogg">
-
+            <source src="../video/video_baggeto.webm" type="video/webm">
+            
             Seu navegador não suporta o elemento <code>video</code>.
 
         </video>
