--- a/html/index.html
+++ b/html/index.html
@@ -584,7 +584,7 @@
 
             <h4>
                 
-                Matriz: Orleans - SC<br> Rua: Atilio Fenilli<br> Bairro: Corridas<br> Cep: 88870000<br> Fone: (48) 3466-3241 / 3466-4782 <br><br>E-mails: <br><br>Comercial<br> <a href="mailto:comercial@transportesbaggeto.com.br">comercial@transportesbaggeto.com.br</a><br><br> Financeiro
+                Matriz: Orleans - SC<br> Rua: Atilio Fenilli<br> Bairro: Corridas<br> Cep: 88870000<br> Fone:  <a href="tel:+4834663241">(48) 3466-3241 / 3466-4782</a> <br><br>E-mails: <br><br>Comercial<br> <a href="mailto:comercial@transportesbaggeto.com.br">comercial@transportesbaggeto.com.br</a><br><br> Financeiro
                 <br> <a href="mailto:financeiro@transportesbaggeto.com.br">financeiro@transportesbaggeto.com.br</a><br><br> Cargas <br><a href="mailto:cargas@transportesbaggeto.com.br">cargas@transportesbaggeto.com.br</a><br><br> Compras
                 <br><a href="mailto:compras@transportesbaggeto.com.br">compras@transportesbaggeto.com.br</a><br><br> Setor Pessoal<br> <a href="mailto:rh@transportesbaggeto.com.br">rh@transportesbaggeto.com.br</a>
                 
@@ -600,7 +600,7 @@
 
             <h4>
 
-                Filial: Cordeirópolis - SP<br> Rodovia: Washington Luiz, Km 154 – 5 <br>Numero: 196<br> Cep: 13490-000 <br>Fone: (19) 35468193 / 35468204<br><br> E-mails: <br><br>Comercial<br> <a href="mailto:rodrigo@transportesbaggeto.com.br">rodrigo@transportesbaggeto.com.br</a>
+                Filial: Cordeirópolis - SP<br> Rodovia: Washington Luiz, Km 154 – 5 <br>Numero: 196<br> Cep: 13490-000 <br>Fone: <a href="tel:+1935468193">(19) 3546-8193 / 3546-8204</a><br><br> E-mails: <br><br>Comercial<br> <a href="mailto:rodrigo@transportesbaggeto.com.br">rodrigo@transportesbaggeto.com.br</a>
                 <br><br>Financeiro <br><a href="mailto:rossi@transportesbaggeto.com.br">rossi@transportesbaggeto.com.br</a><br><br> Faturamento
                 <br>
                 <a href="mailto:faturamentosp@transportesbaggeto.com.br">faturamentosp@transportesbaggeto.com.br</a>
